css file updated

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Calculate me! - A calculator made my me</title>
+    <title>Calculator</title>
     <link href="assets/style.css" rel="stylesheet" type="text/css" />
     <link href="assets/utils.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
-    <h1 class="text-center">Welcome to Calculate me!</h1>
+    <h1 class="heading">Calculator</h1>
     <div class="container flex flex-col items-center mx-auto m-w-20">
       <div class="row">
         <input class="input" type="text" />
@@ -41,8 +41,9 @@
       <div class="row">
         <button class="button">0</button>
         <button class="button">.</button>
-        <button class="button">=</button>
         <button class="button">-</button>
+        <button class="button">=</button>
+        
       </div>
     </div>
     <script src="assets/script.js"></script>
